--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <body>
-    <canvas id="snake" width="512" height="512">
-
-    </canvas>
+    <h1>GAME SNAKE</h1>
+    <canvas id="snake" width="512" height="512"></canvas>
 </body>
 
-</html>l
+</html>
